--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "1.0.0",
   "description": "一個現代化的網頁版Safety Stock計算工具",
   "main": "app.js",
-  "scripts": {
-    "start": "python -m http.server 8000",
-    "start:node": "npx http-server",
-    "dev": "python -m http.server 8000"
-  },
+  "scripts": {},
   "keywords": [
     "safety-stock",
     "inventory-management",
